2023-07-24  Johannes Schauer Marin Rodrigues  <josch@debian.org>

	* pe-dll.c (fill_edata): If inserting a timestamp, use the value
	held in the SOURCE_DATE_EPOCH environment variable, if it is
	defined.
	* ld.texi (--insert-timestamp): Document change in behaviour.

2023-07-03  Nick Clifton  <nickc@redhat.com>

	* configure: Regenerate.

2023-07-03  Nick Clifton  <nickc@redhat.com>

	2.41 Branch Point.

2023-06-28  Nikita Popov  <npopov@redhat.com>
	    Nick Clifton  <nickc@redhat.com>

	PR 30568
	* ldfile.c (ldfile_try_open_bfd): Do not track lto generated
	temporary files.

2023-06-21  Nick Clifton  <nickc@redhat.com>

	PR 29072
	* testsuite/ld-elf/elf.exp (target_defaults_to_execstack): Always
	return false for linkers configured with the --enable-default-execstack=no
	option.

2023-06-14  Nick Clifton  <nickc@redhat.com>

	PR 30374
	* ldfile.c (struct input_remap): New structure.
	(ldfile_add_remap): New function.
	(ldfile_remap_input_free): New function.
	(ldfile_add_remap_file): New function.
	(ldfile_possibly_remap_input): New function.
	(ldfile_print_input_remaps): New function.
	* ldfile.h: Add prototypes for new functions.
	* ldlang.c (new_afile): Call ldfile_possibly_remap_input.
	(lang_finish): Call ldfile_remap_input_free.
	(lang_map): Call ldfile_print_input_remaps.
	* ldlex.h (OPTION_REMAP_INPUTS, OPTION_REMAP_INPUTS_FILE): Define.
	* lexsup.c (ld_options): Add --remap-inputs-file and --remap-inputs.
	(parse_args): Handle new options.
	* NEWS: Mention the new feature.
	* ld.texi: Document the new options.
	* testsuite/ld-misc/input-remap.exp: New test driver.
	* testsuite/ld-misc/remaps.r: New file: Expected linker output.
	* testsuite/ld-misc/remaps.txt: New file.  Input remaps file.

2023-06-07  Nick Clifton  <nickc@redhat.com>

	PR 30499
	* testsuite/ld-elfcomm/elfcomm.exp: Update regexps to match new
	output from the linker.

2023-05-17  Luca Bacci  <luca.bacci@outlook.com>

	PR 30421
	* emultempl/pe.em (set_decoration): New function.